clusterconfig/apiserver/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    endpointslice.kubernetes.io/skip-mirror: "true"
  name: kubernetes
  namespace: default
subsets:
- addresses:
  - ip: 10.91.0.2
  ports:
  - name: https
    port: 6443
    protocol: TCP
