clusterconfig/apiserver/kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: system-cluster-critical
    svccontroller.k3s.cattle.io/lbpool: pool1
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetes
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.0.1
  clusterIPs:
  - 10.43.0.1
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 6443
    protocol: TCP
    targetPort: 6443
  sessionAffinity: None
  type: LoadBalancer
