clusterconfig/apiserver/apiserver-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes
  namespace: default
  labels:
    component: apiserver
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.frontend.rule.type: PathPrefix
    svccontroller.k3s.cattle.io/lbpool: pool1
spec:
  rules:
  - host: api.rick.expresso.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes
            port:
              name: https
